# algo-trading-python-meetup

./: .env  .gitignore  AAPL Trading Model.ipynb  pyproject.toml
.ipynb_checkpoints/: AAPL Trading Model-checkpoint.ipynb
data/: aapl.csv
models/: rf_aapl_model.pkl
src/algo_trading_meetup/: paper_trading_flow.py
